--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@
 	--greytext: #757575;
 	--greytext-footer: rgba(255, 255, 255, 0.6);
 	--darkgrey: #2f303a;
+	--shadow: rgba(0, 0, 0, 0.15);
 }
 body {
 	background-color: var(--white);
@@ -51,28 +52,93 @@ body {
 
 /*HEADER*/
 .logo {
-	color: #000000;
+	color: var(--black);
 	text-decoration: none;
+	font-family: "Raleway";
+	font-style: normal;
+	font-weight: 700;
+	font-size: 26px;
+	line-height: 31px;
+	letter-spacing: 0.03em;
 }
 .logo-web {
 	color: var(--blue);
 }
-.nav-site {
-	color: var(--accentblack);
-}
+
 .nav-link {
 	text-decoration: none;
-	color: var(--accentblack)
+	color: var(--accentblack);
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 16px;
+	letter-spacing: 0.02em;
 }
-.nav-link:hover, .nav-link:focus {
+.nav-link:hover,
+.nav-link:focus {
 	color: var(--blue);
 }
 .header-contact {
 	color: var(--greytext);
 	text-decoration: none;
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 16px;
+	letter-spacing: 0.02em;
 }
-.header-contact:hover, .header-contact:focus {
+.header-contact:hover,
+.header-contact:focus {
 	color: var(--blue);
 }
-/* FOOTER */
+/* MAIN */
+.hero {
+	background-color: var(--darkgrey);
+}
+.hero-title {
+	color: var(--white);
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 900;
+	font-size: 44px;
+	line-height: 60px;
+	text-align: center;
+	letter-spacing: 0.06em;
+	text-transform: uppercase;
+}
+.button {
+	background-color: var(--blue);
+	color: var(--white);
+	width: 216px;
+	height: 50px;
+	left: 692px;
+	top: 430px;
+}
+.button:hover,
+.button:focus {
+	background-color: #188ce8;
+	box-shadow: 0px 4px 4px var(--shadow);
+}
+/* Advant */
+.adv-title {
+	color: var(--accentblack);
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 16px;
+	/* letter-spacing: 0.03em; */
+	/* text-transform: uppercase; */
+}
+.adv-text {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 400;
+	font-size: 14px;
+	/* line-height: 24px; */
+	/* letter-spacing: 0.03em; */
+}
 
+/* FOOTER */
