--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@
 	--greytext-footer: rgba(255, 255, 255, 0.6);
 	--darkgrey: #2f303a;
 	--shadow: rgba(0, 0, 0, 0.15);
+	--teamback: #f5f4fa;
 }
 body {
 	background-color: var(--white);
@@ -52,7 +53,7 @@ body {
 
 /*HEADER*/
 .logo {
-	color: var(--black);
+	color: var(--blue);
 	text-decoration: none;
 	font-family: "Raleway";
 	font-style: normal;
@@ -62,7 +63,7 @@ body {
 	letter-spacing: 0.03em;
 }
 .logo-web {
-	color: var(--blue);
+	color: var(--black);
 }
 
 .nav-link {
@@ -93,6 +94,7 @@ body {
 .header-contact:focus {
 	color: var(--blue);
 }
+
 /* MAIN */
 .hero {
 	background-color: var(--darkgrey);
@@ -140,5 +142,73 @@ body {
 	/* line-height: 24px; */
 	/* letter-spacing: 0.03em; */
 }
+/* WORK */
+.work-title {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 700;
+	font-size: 36px;
+	line-height: 42px;
+	/* text-align: center;
+	letter-spacing: 0.03em; */
+	color: var(--accentblack);
+}
+/* TEAM */
+.team {
+	background-color: var(--teamback);
+}
+.team-title {
+	color: var(--accentblack);
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 700;
+	font-size: 36px;
+	line-height: 42px;
+	/* text-align: center;
+	letter-spacing: 0.03em; */
+}
+/* .team-comp {
+	
+} */
+.team-item {
+	background-color: var(--white);
+	/* box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);     */
+}
+
+/* .team-img {
+
+} */
+.team-name {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 19px;
+	/* text-align: center;
+	letter-spacing: 0.03em; */
+	color: var(--accentblack);
+}
+.team-text {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 19px;
+	/* text-align: center;
+	letter-spacing: 0.03em; */
+}
 
 /* FOOTER */
+footer {
+	background-color: var(--darkgrey);
+}
+.flogo {
+	color: var(--blue);
+    text-decoration: none;
+	font-family: "Raleway";
+	font-style: normal;
+	font-weight: 700;
+	font-size: 26px;
+	line-height: 31px;
+	/* letter-spacing: 0.03em; */
+}
