--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,7 @@ body {
 }
 .button:hover,
 .button:focus {
+  font-family: inherit;
   background-color: #188ce8;
   box-shadow: 0px 4px 4px var(--shadow);
 }
